Version 2.0.16 release (2014/09/24)
-------------------------------------------

Added the option to link contacts merging their information.

Added Message button for Configure ePortfolios, it sends Classic 
logins to parents for current students in a form group.

Fees XML library uses ClassIS id for the mandate id.

Fix to SEN Strengths textarea name.

Added Message button for Transport.

Infobook search fields style fixed for lower worklevel.

Added message button for Transport buses.


Version 2.0.15 release (2014/09/10)
-------------------------------------------

Link added to New enrolments last year's total to view the students.

New button from Infobook displays directly the list with students 
if there is only one community and for the current year only displays 
the current students.

Fix to checking columns in completed registers list for IE.

Get the week days in transport_display simplified.

Fix for last update time for completed registers.

Registers notices can be displayed now.

Capslock message is shown only once and for the password.

Added missing jquery link for report comments writer.

Reloads iframe clicking on ClassIS logo.

Fix to report comments checksids.

Checksids action generalised for different form names.


Version 2.0.14 release (2014/08/29)
-------------------------------------------

Fix for Transport editor and Attendance editor modals.

Fix for default view in Infobook student list.

Added size parameter for staff profile pictures.

Added version number to book.js file to avoid caching.

Temporarily thanks modal set to not be displayed after login.


Version 2.0.13 release (2014/08/21)
-------------------------------------------

Fix for updating profile assessments on roll-over.

Fix for photo caching compatibility with Internet Explorer 7.

Added attendance table and page for staff.

Fix for slow completed registers page.

Added the option to export a not paid fees list by yeargroup.
