@@ -1,6 +1,8 @@
 Version 2.0.16 release (2014/09/24)
 -------------------------------------------
 
+Added payee and account/iban to fees_invoice_export.
+
 Added the option to link contacts merging their information.
 
 Added Message button for Configure ePortfolios, it sends Classic 
